--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ Django==1.9.2
 Pillow==3.1.1
 argparse==1.2.1
 dj-database-url==0.4.0
+django-social-auth==0.7.28
+feedparser==5.2.1
 gunicorn==19.4.5
+httplib2==0.9.2
+oauth2==1.9.0.post1
 psycopg2==2.6.1
+python-openid==2.2.5
 requests==2.9.1
 whitenoise==2.0.6
 wsgiref==0.1.2
