--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 Authomatic==0.1.0.post1
 Django==1.9.2
 Pillow==3.1.1
+PyJWT==1.4.0
 argparse==1.2.1
 dj-database-url==0.4.0
 feedparser==5.2.1
 gunicorn==19.4.5
 httplib2==0.9.2
 oauth2==1.9.0.post1
+oauthlib==1.0.3
 psycopg2==2.6.1
 python-openid==2.2.5
+python-social-auth==0.2.14
 requests==2.9.1
+requests-oauthlib==0.6.1
+six==1.10.0
 whitenoise==2.0.6
 wsgiref==0.1.2
