--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 Authomatic==0.1.0.post1
-Django==1.9.2
+Django==1.9.5
 Pillow==3.1.1
 PyJWT==1.4.0
+Twisted==16.1.0
 argparse==1.2.1
+asgiref==0.11.2
+autobahn==0.13.0
 beautifulsoup4==4.4.1
+channels==0.11.0
+daphne==0.10.3
 dj-database-url==0.4.0
 django-appconf==1.0.1
 django-googledrive-storage==1.1.3
+django-location-field==1.6.1
 feedparser==5.2.1
+freeze==0.8.0
 google-api-python-client==1.5.0
+googlemaps==2.4.3
 gunicorn==19.4.5
 httplib2==0.9.2
+httpretty==0.8.3
+mock==1.0.1
+nose==1.3.7
 oauth2==1.9.0.post1
 oauth2client==2.0.1
 oauthlib==1.0.3
@@ -27,6 +38,10 @@ requests-oauthlib==0.6.1
 rsa==3.4.2
 simplejson==3.8.2
 six==1.10.0
+sure==1.2.7
+txaio==2.2.2
 uritemplate==0.6
+urllib3==1.7.1
 whitenoise==2.0.6
 wsgiref==0.1.2
+zope.interface==4.1.3
