--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Pillow==3.1.1
 PyJWT==1.4.0
 Twisted==16.1.0
 argparse==1.2.1
+asgi-redis==0.10.0
 asgiref==0.11.2
 autobahn==0.13.0
 beautifulsoup4==4.4.1
@@ -21,6 +22,7 @@ gunicorn==19.4.5
 httplib2==0.9.2
 httpretty==0.8.3
 mock==1.0.1
+msgpack-python==0.4.7
 nose==1.3.7
 oauth2==1.9.0.post1
 oauth2client==2.0.1
@@ -33,6 +35,7 @@ pycrypto==2.6.1
 python-dateutil==2.5.2
 python-openid==2.2.5
 python-social-auth==0.2.14
+redis==2.10.5
 requests==2.9.1
 requests-oauthlib==0.6.1
 rsa==3.4.2
