--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ freeze==0.8.0
 google-api-python-client==1.5.0
 googlemaps==2.4.3
 gunicorn==19.4.5
+haikunator==1.0.1
 httplib2==0.9.2
 httpretty==0.8.3
 mock==1.0.1
@@ -45,6 +46,7 @@ sure==1.2.7
 txaio==2.2.2
 uritemplate==0.6
 urllib3==1.7.1
+wheel==0.29.0
 whitenoise==2.0.6
 wsgiref==0.1.2
 zope.interface==4.1.3
